--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "eslint": "^8.57.0",
     "nuxt": "^3.10.3",
@@ -20,6 +21,7 @@
     "vue-router": "^4.3.0"
   },
   "dependencies": {
+    "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
     "radix-vue": "^1.4.9"
   }
