--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d dist"
+    "deploy": "nuxt build --preset github_pages && gh-pages --dotfiles -d .output/public"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
