--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "eslint": "^8.57.0",
     "gh-pages": "^6.1.1",
     "nuxt": "^3.11.2",
-    "vue": "^3.4.23",
+    "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "dependencies": {
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
-    "radix-vue": "^1.7.1"
+    "radix-vue": "^1.8.3"
   }
 }
